# hs-cc-ffi-sample

./: .hlint.yaml  hello-hs-ffi.cabal
app/: Main.hs
cbits/: arith.cc  arith.h  arith_capi.cc  arith_capi.h
