cabal-version: 3.8
name: hello-hs-ffi
version: 0.1.0.0
author: Topi Kettunen
maintainer: topi@topikettunen.com
license: Unlicense
license-file: LICENSE
build-type: Simple

extra-source-files:
  .hlint.yaml
  cbits/*.h
  cbits/Makefile

common base
  ghc-options: -Wall -Wextra -Wno-orphans -Wno-name-shadowing
  default-language: Haskell2010
  build-depends: base ^>=4.16.3.0

executable arith
  import: base
  main-is: Main.hs
  hs-source-dirs: app

  -- C++ bits
  cxx-options: -std=c++20 -Wall -Werror -Wextra
  cxx-sources: cbits/arith_capi.cc cbits/arith.cc
  include-dirs: cbits
  extra-libraries: stdc++
